0031706: Data Exchange, RWGltf_CafReader - imports model with incorrect transformation

RWGltf_GltfJsonParser::bindNamedShape() - shape location is now multiplied not just overridden.